--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,8 @@
 # 此 .gitignore 文件已由 Microsoft(R) Visual Studio 自动创建。
 ################################################################################
 
-/.vs/MyDapperExtension
+/.vs
+/bin
+/obj
+/packages
+
